--- a/server-js/package.json
+++ b/server-js/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-authServer": "./node_modules/jest/bin/jest.js ./tests/authServer.test.js"
+    "test-authServer": "./node_modules/jest/bin/jest.js ./tests/authServer.test.js",
+    "test-todoServer": "./node_modules/jest/bin/jest.js ./tests/todoServer.test.js"
   },
   "author": "pingu-73",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "uuid": "^9.0.1"
   }
 }
